[tool.poetry]
name = "subsettools"
version = "0.1.0"
description = "Subsetting tools and utilities for ParFlow"
authors = ["George Artavanis, Amanda Triplett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "1.23.0"
pytz = "2020.1"
pftools = "^1.3.9"
requests = ">=2.28.2"
hf-hydrodata = {git = "https://github.com/hydroframe/hf_hydrodata.git", rev = "0.9.12"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
matplotlib = "^3.7.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
