[tool.poetry]
name = "subsettools"
version = "1.0.3"
description = "Subsetting tools and utilities for ParFlow"
authors = ["George Artavanis, Amanda Triplett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.23.0"
pytz = ">=2020.1"
requests = ">=2.28.2"
pftools = ">=1.3.10"
hf-hydrodata = ">=1.0.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
black = "^23.9.1"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx = "6.2.1"
myst-nb = {git = "https://github.com/executablebooks/MyST-NB.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
